# ALL-IN-ONE

./: .gitignore  .tmp-generated-smoke.cjs  .tmp-nodepath-smoke.cjs  .tmp-playwright-check.cjs  .tmp-playwright-line.cjs  .tmp-require-playwright.cjs  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  GOODNIGHT.md  README.md  agent-alignment-plan.md  agent-architecture-analysis.html  agent-fix-plan.md  index.html  package-lock.json  package.json  style.html  tsconfig.json  vite.config.ts  一期目标  重构方案.md  阶段总结.md  需求.md
.claude/: settings.json
.codex/: hooks.json
.tmp/: dom.html  goodnight-ui-standards-preview.html  main-workbench-ui-directions.html  responsive-audit-result.json  responsive-audit.ps1
docs/: ai-architecture-cc-haha-comparison.html  ai-chat-message-boundary-summary.zh-CN.html  ai-runtime-architecture-overview.html  builtin-ai-smoke-test.md  delete-flow-simple-explainer.html  goodnight-ai-architecture.html  goodnight-obsidian-skills-adaptation.md  node-runtime-sidecar-full-cutover.html
graphify-out/: .graphify_analysis.json  .graphify_detect.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
opencode-devflow/: go.mod  go.sum  main.go  tool_runner.go
scripts/: build-goodnight-server.js  check_mojibake.py  fix_mojibake.py  package-win.ps1  test-builtin-ai-file-ops.cjs  test-builtin-ai-file-ops.ps1  test-builtin-ai-smoke.cjs  test-builtin-ai-smoke.ps1  test-builtin-ai-turns.cjs  test-builtin-ai-turns.ps1  verify-ai-workspace-embedded.mjs
src/: App.css  App.tsx  main.tsx  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+2931 files in other folders)
