[workspace]
resolver = "2"
members = [
  "src-tauri",
  "crates/goodnight-core",
  "crates/goodnight-server",
  "crates/goodnight-mcp-bridge",
]

[profile.dev]
debug = 1

[profile.dev.package."*"]
debug = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.server]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 16
